fix: close icon vertical alignment

--- a/packages/components/src/components/notification-message/notification-message.css
+++ b/packages/components/src/components/notification-message/notification-message.css
@@ -57,7 +57,7 @@
 
 .notification-message__icon-close {
   position: absolute;
-  top: 9.5px;
+  top: 8px;
   right: 13.5px;
   color: black;
 }
